- corrected order of crosscal solutions - removed TEC correction step from crosscal - added better error handling - updated default.cfg

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -50,10 +50,10 @@ preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the 
 
 [CROSSCAL]
 crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
-crosscal_tec = False                                # TEC corrections for all datasets
+crosscal_initial_phase = True                       # Initial phase calibration from the flux calibrator
+crosscal_global_delay = True                        # Global delay corrections
 crosscal_bandpass = True                            # Bandpass correction from the flux calibrator
 crosscal_gains = True                               # Gain and flux corrections for the flux calibrator
-crosscal_global_delay = True                        # Global delay corrections
 crosscal_crosshand_delay = True                     # Cross-hand delay corrections
 crosscal_leakage = True                             # Polarisation leakage corrections
 crosscal_polarisation_angle = True                  # Polarisation angle corrections
