Added split module to config for quicklook

--- a/apercal/modules/default_ql.cfg
+++ b/apercal/modules/default_ql.cfg
@@ -21,9 +21,11 @@ prepare_obsnum_polcal = None                        # Observation number of the 
 prepare_obsnum_target = None                        # Observation number of the target, format: NNN, e.g. '003'
 prepare_target_beams = None                         # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
-prepare_split = True                                # Split a part of the dataset out for the quicklook pipeline
-prepare_split_startchannel = 12288                  # First channel to split out
-prepare_split_endchannel = 14335                    # Last channel to split out
+
+[SPLIT]
+split = True                                        # Split a part of the dataset out for the quicklook pipeline
+split_startchannel = 12288                          # First channel to split out
+split_endchannel = 14335                            # Last channel to split out
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
