removed enable split setting

--- a/apercal/modules/default_ql.cfg
+++ b/apercal/modules/default_ql.cfg
@@ -23,7 +23,7 @@ prepare_target_beams = None                         # Target beam numbers to cop
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
 [SPLIT]
-split = True                                        # Split a part of the dataset out for the quicklook pipeline
+#split = True                                        # Split a part of the dataset out for the quicklook pipeline
 split_startchannel = 12288                          # First channel to split out
 split_endchannel = 14335                            # Last channel to split out
 
