Added some aoflagger parameters

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -50,6 +50,11 @@ preflag_aoflagger_targetbeams = 'all'               # Targetbeams to flag, optio
 preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the flux calibrator
 preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
 preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
+preflag_aoflagger_threads = 48                      # Number of threads used by Aoflagger
+preflag_aoflagger_use_interval = True               # Use interval of time steps to process data
+preflag_aoflagger_min_interval = 0                  # Minimum interval (Will be deprecated with updated version of aoflagger)
+preflag_aoflagger_max_interval = 0                  # Maximum interval
+preflag_aoflagger_version = ''                      # Version of aoflagger to be used (Only for testing, Remove in final version)
 
 [CROSSCAL]
 crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
