Fixed name of preflag_targetbeams

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -29,7 +29,7 @@ prepare_split_endchannel = 14335                    # Last channel to split out
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
 preflag_edges = True                                # Flag subband egdes for all datasets
 preflag_ghosts = False                              # Flag ghost channels for all datasets
-preflag_target_beams = 'all'                        # Targetbeams to flag, options: 'all' or '00,01,02'
+preflag_targetbeams = 'all'                        # Targetbeams to flag, options: 'all' or '00,01,02'
 preflag_manualflag = True                           # Run the manualflag options
 preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
 preflag_manualflag_polcal = True                    # Run manualflag options for the polarised calibrator
