--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -53,9 +53,9 @@ preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the 
 preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
 preflag_aoflagger_threads = 48                      # Number of threads used by Aoflagger
 preflag_aoflagger_use_interval = True               # Use interval of time steps to process data
-preflag_aoflagger_min_interval = 0                  # Minimum interval (Will be deprecated with updated version of aoflagger)
-preflag_aoflagger_max_interval = 450                # Maximum interval
-preflag_aoflagger_version = ''                 # Version of aoflagger to be used (Only for testing, Remove in final version)
+preflag_aoflagger_delta_interval = 450              # Length of interval
+preflag_aoflagger_max_interval = 1348               # Maximum interval
+preflag_aoflagger_version = ''                      # Version of aoflagger to be used (Only for testing, Remove in final version)
 
 [CROSSCAL]
 crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
