--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -50,10 +50,10 @@ preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the 
 
 [CROSSCAL]
 crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
-crosscal_tec = False                                # TEC corrections for all datasets
+crosscal_initial_phase = True                       # Initial phase calibration from the flux calibrator
+crosscal_global_delay = True                        # Global delay corrections
 crosscal_bandpass = True                            # Bandpass correction from the flux calibrator
 crosscal_gains = True                               # Gain and flux corrections for the flux calibrator
-crosscal_global_delay = True                        # Global delay corrections
 crosscal_crosshand_delay = True                     # Cross-hand delay corrections
 crosscal_leakage = True                             # Polarisation leakage corrections
 crosscal_polarisation_angle = True                  # Polarisation angle corrections
@@ -84,11 +84,11 @@ selfcal_parametric_skymodel_cutoff = 0.8            # Cutoff for the appaerant f
 selfcal_parametric_skymodel_distance = 30           # Distance between NVSS/FIRST and WENSS sources in arcseconds to count as the same source
 selfcal_parametric_solint = 'auto'                  # Time solution interval in minutes or 'auto' for automatic calculation
 selfcal_parametric_uvmin = 0.5                      # minimum u,v-limit in klambda
-selfcal_parametric_uvmax = 1000                     # maximum u,v-limit in klambda
+selfcal_parametric_uvmax = 3000                     # maximum u,v-limit in klambda
 selfcal_parametric_amp = False                      # Parametric amplitude calibration
-selfcal_parametric_nfbin = 24                       # Number of solution intervals over frequency for parametric calibration
+selfcal_parametric_nfbin = 32                       # Number of solution intervals over frequency for parametric calibration
 selfcal_phase = True                                # Do the standard iterative self-calibration
-selfcal_phase_majorcycle = 3                        # Maximum number of major cycles
+selfcal_phase_majorcycle = 6                        # Maximum number of major cycles
 selfcal_phase_majorcycle_function = 'power'         # Type of function to decrease threshold for major cycles, possible values: 'power'
 selfcal_phase_minorcycle = 3                        # Maximum number of minor cycles within each major cycle
 selfcal_phase_minorcycle_function = 'square'        # Type of function to decrease threshold for minor cycles, possible values: 'square', 'power', 'linear'
@@ -98,11 +98,11 @@ selfcal_phase_drinit = 30                           # drinit parmeter to calcula
 selfcal_phase_dr0 = 2.0                             # dr0 parameter to calculate dynamcic range limits in major cycles with drinit * np.power(dr0, major cycle)
 selfcal_phase_mindr = 5.0                           # minimum dynamic range for masking if calculated thresholds are lower
 selfcal_phase_nsigma = 5                            # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
-selfcal_phase_uvmin = [0.0,0.0,0.0]                 # Minimum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
-selfcal_phase_uvmax = [3000,3000,3000]              # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
+selfcal_phase_uvmin = [0.5,0.3,0.0,0.0,0.0,0.0]     # Minimum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
+selfcal_phase_uvmax = [3000,3000,3000,3000,3000,3000]    # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
 selfcal_phase_solint = 'auto'                       # Selfcal solution intervals for each major cycle as a list (e.g. [10,5,3]) or 'auto' for an automatic calculation
-selfcal_phase_nfbin = 24                            # Number of frequency solution intervals
-selfcal_amp = False                                 # Do amplitude calibration, possible values True, False, 'auto'
+selfcal_phase_nfbin = 32                            # Number of frequency solution intervals
+selfcal_amp = 'auto'                                # Do amplitude calibration, possible values True, False, 'auto'
 selfcal_amp_auto_limit = 1.0                        # Threshold for the sum of clean components in Jy in the last model to set amp calibration True in auto mode
 selfcal_amp_minorcycle = 3                          # Maximum number of additional minor cycles to create amplitude model
 selfcal_amp_minorcycle_function = 'square'          # Type of function to decrease threshold for minor cycles, possible values: 'square', 'power', 'linear', should be the same as for phase calibration
@@ -115,7 +115,7 @@ selfcal_amp_nsigma = 5                              # Factor to calculate theore
 selfcal_amp_uvmin = 0.0                             # Minimum u,v-range to use for amplitude self-calibration during major cycles
 selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use for amplitude self-calibration during major cycles
 selfcal_amp_solint = 'auto'                         # Selfcal solution interval for amplitude calibration (e.g. 20) or 'auto' for an automatic calculation
-selfcal_amp_nfbin = 24                              # Number of solution intervals over frequency for amplitude calibration
+selfcal_amp_nfbin = 32                              # Number of solution intervals over frequency for amplitude calibration
 selfcal_amp_ratio = 1.2                             # Ratio of the dirty image min, max, std before and after amplitude calibration to verify amplitude calibration as good
 
 [CONTINUUM]
@@ -129,8 +129,8 @@ continuum_mfimage_drinc = 10.0                      # Increment for each iterati
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
 continuum_chunkimage = True                         # Chunk continuum imaging
-continuum_chunkimage_startchannels = [0,32,64,96,128,160,192,224,256,288,320,352] # Starting subbands for each chunk
-continuum_chunkimage_endchannels = [31,63,95,127,159,191,223,255,287,319,351,383] # Ending subband for each chunk
+continuum_chunkimage_startchannels = [0,32,64]      # Starting subbands for each chunk
+continuum_chunkimage_endchannels = [31,63]          # Ending subband for each chunk
 continuum_chunkimage_imsize = 2049                  # Image size of the chunk images
 continuum_chunkimage_cellsize = 4                   # Cell size of the chunk images
 continuum_chunkimage_minorcycle = 5                 # Maximum minor cycles after iterative chunk imaging is stopped
