--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -147,7 +147,7 @@ continuum_chunkimage_mindr = 5.0                    # Minimum increase in dynami
 continuum_chunkimage_nsigma = 5                     # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
 
 [LINE]
-line_beams = 0,7,10,17,20,27,30,37                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
+line_beams = 'all' .                                # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
 line_splitdata = True
 line_splitdata_chunkbandwidth = 0.05
 line_splitdata_channelbandwidth = 0.000048
