Fix the config file

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -1,4 +1,4 @@
-[INITIAL]
+\[INITIAL]
 fluxcal = ''                                        # Flux calibrator dataset, e.g. '3C295.MS'
 polcal = ''                                         # Polarised calibrator dataset, e.g. '3C286.MS'
 target = ''                                         # Target dataset, e.g. 'LH_WSRT.MS'
@@ -147,7 +147,7 @@ continuum_chunkimage_mindr = 5.0                    # Minimum increase in dynami
 continuum_chunkimage_nsigma = 5                     # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
 
 [LINE]
-line_beams = 'all' .                                # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
+line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
 line_splitdata = True
 line_splitdata_chunkbandwidth = 0.05
 line_splitdata_channelbandwidth = 0.000048
