Fix the config file better

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -1,4 +1,4 @@
-\[INITIAL]
+[INITIAL]
 fluxcal = ''                                        # Flux calibrator dataset, e.g. '3C295.MS'
 polcal = ''                                         # Polarised calibrator dataset, e.g. '3C286.MS'
 target = ''                                         # Target dataset, e.g. 'LH_WSRT.MS'
