- updated default.cfg with polarisation parameters - added subband averaging to polarisation module - added the creation of cubes in Stokes Q and U to polarisation module - added Stokes V mf imaging to polarisation module - added remove option to image2fits subroutine

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -185,9 +185,16 @@ line_image_convolbeam = ''
 polarisation_qu = True                              # Create Q-/U-images
 polarisation_qu_startsubband = 0                    # First subband to image
 polarisation_qu_endsubband = 383                    # Last subband to image
+polarisation_qu_nsubband = 8                        # Number of subbands to combine for one image
 polarisation_qu_imsize = 2049                       # Image size of the Q-/U-images
 polarisation_qu_cellsize = 4                        # Cell size of the Q-/U-images
 polarisation_qu_clean_sigma = 1.5                   # Clean threshold factor (sigma*std of map)
+polarisation_qu_cube = True                         # Create a cube from the Q- and U-images
+polarisation_qu_cube_delete = True                  # Delete the individual channel products after successfully creating the cubes
+polarisation_v = True                               # Create V-image
+polarisation_v_imsize = 3073                        # Image size of the V-image
+polarisation_v_cellsize = 4                         # Cell size of the V-image
+polarisation_v_clean_sigma = 1.5                    # Clean threshold factor (sigma*std of map)
 
 [MOSAIC]
 mosaic_continuum_mf = True
