--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -148,9 +148,11 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
+line_cube_channel_list = [[25, 1242], [919, 4572], [4249, 7902], [7579, 11232], [10909, 14562], [14239, 17892], [17569, 21222], [20899, 24552]]  # channels of the image cubes in numbers of input visibility cube
+line_cube_channelwidth_list = [0.000012, 0.000036, 0.000036, 0.000036, 0.000036, 0.000036, 0.000036, 0.000036]  # list of channel widths of the cube for splitting data
 line_splitdata = True
-line_splitdata_chunkbandwidth = 0.05
-line_splitdata_channelbandwidth = 0.000048
+line_splitdata_chunkbandwidth = 0.05                # in GHz
+line_splitdata_channelbandwidth = 0.000048          # [Depracated, will be overriden] in GHz
 line_transfergains = True
 line_subtract = False
 line_subtract_mode = 'uvmodel'
@@ -166,7 +168,7 @@ line_subtract_mode_uvmodel_imsize = 513
 line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
 line_image = True
-line_image_channels = '2800,3600' # Two comma seperated values as a string with the beginning and end channels, zero based, in the binned channel range
+line_image_channels = '2800,3600' # [Depracated, will be overriden] Two comma seperated values as a string with the beginning and end channels, zero based, in the binned channel range
 line_image_imsize = 661
 line_image_cellsize = 6
 line_image_centre = ''
