- updated transfer module with writing out calibrated UVFITS-file - updated default.cfg and default_ql.cfg - removed an unneccessary line from continuum

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -203,4 +203,4 @@ mosaic_line = False
 mosaic_polarisation = False
 
 [TRANSFER]
-transfer_convert_lineuv2uvfits = True
+transfer_convert_selfcaluv2uvfits = True              # Copy the selfcal solutions to the original dataset and export as UVFITS
