--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -182,6 +182,7 @@ line_image_minorcycle0_dr = 5.0
 line_image_dr0 = 2.0
 line_image_restorbeam = ''
 line_image_convolbeam = ''
+line_always_cleanbup = True                         # In case line fails, auxiliary files are going to be deleted
 
 [POLARISATION]
 polarisation_qu = True                              # Create Q-/U-images
