fixed chunkimage setting

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -135,7 +135,7 @@ continuum_mfimage_c1 = 5.0                          # c1 parameter for clean thr
 continuum_mfimage_drinc = 10.0                      # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
-line_single_cube_input_channelscontinuum_chunkimage = True                         # Chunk continuum imaging
+continuum_chunkimage = True                         # Chunk continuum imaging
 continuum_chunkimage_startchannels = [0,32,64,96,128,160,192,224,256,288,320,352]      # Starting subbands for each chunk
 continuum_chunkimage_endchannels = [31,63,95,127,159,191,223,255,287,319,351]          # Ending subband for each chunk
 continuum_chunkimage_imsize = 2049                  # Image size of the chunk images
