Changed line settings to use 32 chunks

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -151,7 +151,7 @@ line_beams = 'all'                                  # Beams to run line imaging 
 line_cube_channel_list = [[25, 3678], [3355, 7008], [6685, 10338], [10015, 13668], [13345, 16998], [16675, 20328], [20005, 23658], [23335, 24553]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
-line_splitdata_chunkbandwidth = 0.01875             # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz.
+line_splitdata_chunkbandwidth = 0.009375             # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz or 32 chunks with 0.009375
 line_splitdata_channelbandwidth = 0.000036621       # [Deprecated, will be overridden by values in line_cube_channelwidth_list], in GHz
 line_transfergains = True 	  		                # if False no selfcal solutions will be applied to the data. Default is True.
 line_subtract = True                                # Subtract continuum from the uv data
