Added new settings file and changed pipeline settings to above 1300MHz

--- a/apercal/modules/default_fullBW.cfg
+++ b/apercal/modules/default_fullBW.cfg
@@ -1,6 +1,6 @@
-# ============================================================================
-# Pipeline settings for processing data above ~1300MHz (actually >=1292.79MHz)
-# ============================================================================
+# =========================================================================
+# Default pipeline settings for processing Apertif data with full bandwidth
+# =========================================================================
 
 [INITIAL]
 fluxcal = ''                                        # Flux calibrator dataset, e.g. '3C295.MS'
@@ -28,10 +28,6 @@ prepare_bypass_alta = False                         # Set to true if you don't w
 prepare_split = False                               # Split a part of the dataset out for the quicklook pipeline
 prepare_split_startchannel = 12288                  # First channel to split out
 prepare_split_endchannel = 14335                    # Last channel to split out
-
-[SPLIT]
-split_startchannel = 13312                          # First channel to split out
-split_endchannel = 24576                           # Last channel to split out
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
@@ -143,9 +139,9 @@ continuum_mfimage_c1 = 5.0                          # c1 parameter for clean thr
 continuum_mfimage_drinc = 10.0                      # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
-continuum_chunkimage = False                         # Chunk continuum imaging
-continuum_chunkimage_startchannels = [0,32,64,96,128,160]      # Starting subbands for each chunk
-continuum_chunkimage_endchannels = [31,63,95,127,159]          # Ending subband for each chunk
+continuum_chunkimage = True                         # Chunk continuum imaging
+continuum_chunkimage_startchannels = [0,32,64,96,128,160,192,224,256,288,320,352]      # Starting subbands for each chunk
+continuum_chunkimage_endchannels = [31,63,95,127,159,191,223,255,287,319,351]          # Ending subband for each chunk
 continuum_chunkimage_imsize = 2049                  # Image size of the chunk images
 continuum_chunkimage_cellsize = 4                   # Cell size of the chunk images
 continuum_chunkimage_minorcycle = 5                 # Maximum minor cycles after iterative chunk imaging is stopped
@@ -156,8 +152,8 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
-line_cube_channel_list = [[33, 3686], [3363, 7016], [6693, 10346], [10023, 11241]]
-line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
+line_cube_channel_list = [[25, 3678], [3355, 7008], [6685, 10338], [10015, 13668], [13345, 16998], [16675, 20328], [20005, 23658], [23335, 24553]]
+line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
 line_splitdata_chunkbandwidth = 0.009375             # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz or 32 chunks with 0.009375
 line_splitdata_channelbandwidth = 0.000036621       # [Deprecated, will be overridden by values in line_cube_channelwidth_list], in GHz
@@ -195,7 +191,7 @@ line_always_cleanup = True                         # In case line fails, auxilia
 [POLARISATION]
 polarisation_qu = True                              # Create Q-/U-images
 polarisation_qu_startsubband = 0                    # First subband to image
-polarisation_qu_endsubband = 176                    # Last subband to image
+polarisation_qu_endsubband = 383                    # Last subband to image
 polarisation_qu_nsubband = 8                        # Number of subbands to combine for one image
 polarisation_qu_imsize = 2049                       # Image size of the Q-/U-images
 polarisation_qu_cellsize = 4                        # Cell size of the Q-/U-images
