--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -156,6 +156,8 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
+line_first_level_threads = 16                       # set the first level threads for line
+line_second_level_threads = 32                      # set the second level threads for line
 line_cube_channel_list = [[33, 3686], [3363, 7016], [6693, 10346], [10023, 11241]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
