--- a/apercal/modules/default_fullBW.cfg
+++ b/apercal/modules/default_fullBW.cfg
@@ -152,6 +152,8 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
+line_first_level_threads = 16                       # set the first level threads for line
+line_second_level_threads = 32                      # set the second level threads for line
 line_cube_channel_list = [[25, 3678], [3355, 7008], [6685, 10338], [10015, 13668], [13345, 16998], [16675, 20328], [20005, 23658], [23335, 24553]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
