--- a/apercal/modules/default_1300MHz.cfg
+++ b/apercal/modules/default_1300MHz.cfg
@@ -1,5 +1,7 @@
 # ============================================================================
-# Pipeline settings for processing data above ~1300MHz (actually >=1292.79MHz)
+# Pipeline settings for processing data above ~1290MHz
+# However, split needs to happen at ~1280MHz (or half the band)
+# because of line cube specifications
 # ============================================================================
 
 [INITIAL]
@@ -25,13 +27,13 @@ prepare_obsnum_polcal = None                        # Observation number of the 
 prepare_obsnum_target = None                        # Observation number of the target, format: NNN, e.g. '003'
 prepare_target_beams = None                         # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
-prepare_split = False                               # Split a part of the dataset out for the quicklook pipeline
-prepare_split_startchannel = 12288                  # First channel to split out
-prepare_split_endchannel = 14335                    # Last channel to split out
+prepare_split = False                               # (deprecated) Split a part of the dataset out for the quicklook pipeline
+prepare_split_startchannel = 12288                  # (depracated) First channel to split out
+prepare_split_endchannel = 14335                    # (depracated) Last channel to split out
 
 [SPLIT]
-split_startchannel = 13312                          # First channel to split out
-split_endchannel = 24576                           # Last channel to split out
+split_startchannel = 12288                          # First channel to split out
+split_endchannel = 24575                           # Last channel to split out
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
@@ -47,7 +49,7 @@ preflag_manualflag_auto = True                      # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
 preflag_manualflag_baseline = ''                    # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
-preflag_manualflag_channel = ''                     # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
+preflag_manualflag_channel = '0~1024'               # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
 preflag_aoflagger = True                            # Run the aoflagger step
@@ -156,7 +158,9 @@ continuum_chunkimage_nsigma = 5                     # Factor to calculate theore
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
-line_cube_channel_list = [[33, 3686], [3363, 7016], [6693, 10346], [10023, 11241]]
+line_first_level_threads = 16                       # set the first level threads for line
+line_second_level_threads = 32                      # set the second level threads for line
+line_cube_channel_list = [[1059, 4712], [4389, 8042], [7719, 11372], [11048, 12266]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
 line_splitdata_chunkbandwidth = 0.009375             # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz or 32 chunks with 0.009375
@@ -195,7 +199,7 @@ line_always_cleanup = True                         # In case line fails, auxilia
 [POLARISATION]
 polarisation_qu = True                              # Create Q-/U-images
 polarisation_qu_startsubband = 0                    # First subband to image
-polarisation_qu_endsubband = 176                    # Last subband to image
+polarisation_qu_endsubband = 191                    # Last subband to image
 polarisation_qu_nsubband = 8                        # Number of subbands to combine for one image
 polarisation_qu_imsize = 2049                       # Image size of the Q-/U-images
 polarisation_qu_cellsize = 4                        # Cell size of the Q-/U-images
