Added robust weighting settings to config for continuum and selfcal

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -111,6 +111,7 @@ selfcal_phase_uvmin = [0.5,0.3,0.0,0.0,0.0,0.0]     # Minimum u,v-range to use f
 selfcal_phase_uvmax = [3000,3000,3000,3000,3000,3000]    # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
 selfcal_phase_solint = 'auto'                       # Selfcal solution intervals for each major cycle as a list (e.g. [10,5,3]) or 'auto' for an automatic calculation
 selfcal_phase_nfbin = 32                            # Number of frequency solution intervals
+selfcal_phase_robust = -2                           # Robust weighting setting
 selfcal_amp = 'auto'                                # Do amplitude calibration, possible values True, False, 'auto'
 selfcal_amp_auto_limit = 1.0                        # Threshold for the sum of clean components in Jy in the last model to set amp calibration True in auto mode
 selfcal_amp_minorcycle = 3                          # Maximum number of additional minor cycles to create amplitude model
@@ -126,6 +127,7 @@ selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use f
 selfcal_amp_solint = 'auto'                         # Selfcal solution interval for amplitude calibration (e.g. 20) or 'auto' for an automatic calculation
 selfcal_amp_nfbin = 32                              # Number of solution intervals over frequency for amplitude calibration
 selfcal_amp_ratio = 1.2                             # Ratio of the dirty image min, max, std before and after amplitude calibration to verify amplitude calibration as good
+selfcal_amp_robust = -2                             # Robust weighting setting
 
 [CONTINUUM]
 continuum_gaussianity = 1e-2                        # Gaussianity parameter for residual images in all steps to verify them as good (see scipy.stats.normaltest)
@@ -137,6 +139,7 @@ continuum_mfimage_c1 = 5.0                          # c1 parameter for clean thr
 continuum_mfimage_drinc = 10.0                      # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
+continuum_mfimage_robust = -2                       # Robust weighting setting
 continuum_chunkimage = False                         # Chunk continuum imaging
 continuum_chunkimage_startchannels = [0,32,64,96,128,160]      # Starting subbands for each chunk
 continuum_chunkimage_endchannels = [31,63,95,127,159]          # Ending subband for each chunk
@@ -147,6 +150,7 @@ continuum_chunkimage_c1 = 5.0                       # c1 parameter for clean thr
 continuum_chunkimage_drinc = 10.0                   # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_chunkimage_mindr = 5.0                    # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_chunkimage_nsigma = 5                     # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
+continuum_chunkimage_robust = -2                       # Robust weighting setting
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
