--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -47,6 +47,9 @@ preflag_manualflag_baseline = ''                    # Flag certai baselines, e.g
 preflag_manualflag_channel = '0~1024'               # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
+preflag_manualflag_file = ''                        # File with flagging information
+preflag_manualflag_file_path = ''                   # Path to file with flagging information, if empty it is assumed to be in `basedir`
+preflag_manualflag_file_type = 'pipeline'           # Type of flagging file: 'pipeline' if flags for multiple beams in json format, 'beam' if direct Casa commands for single beam
 preflag_aoflagger = True                            # Run the aoflagger step
 preflag_aoflagger_bandpass = True                   # Derive a preliminary bandpass for AOFlagging
 preflag_aoflagger_fluxcal = True                    # AOFlag the flux calibrator
@@ -156,10 +159,10 @@ continuum_chunkimage_robust = -2                       # Robust weighting settin
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
 line_first_level_threads = 16                       # set the first level threads for line
 line_second_level_threads = 32                      # set the second level threads for line
-line_cube_channel_list = [[1059, 4712], [4389, 8042], [7719, 11372], [11048, 12266]]
+line_cube_channel_list = [[1059, 4713], [4389, 8043], [7719, 11373], [11048, 12266]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
-line_splitdata_chunkbandwidth = 0.009375             # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz or 32 chunks with 0.009375
+line_splitdata_chunkbandwidth = 0.009375            # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz or 32 chunks with 0.009375
 line_splitdata_channelbandwidth = 0.000036621       # [Deprecated, will be overridden by values in line_cube_channelwidth_list], in GHz
 line_transfergains = True 	  		                # if False no selfcal solutions will be applied to the data. Default is True.
 line_subtract = True                                # Subtract continuum from the uv data
