--- a/apercal/modules/default_1300MHz.cfg
+++ b/apercal/modules/default_1300MHz.cfg
@@ -36,12 +36,10 @@ split_endchannel = 24575                           # Last channel to split out
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
 preflag_edges = True                                # Flag subband egdes for all datasets
 preflag_ghosts = False                              # Flag ghost channels for all datasets
-preflag_targetbeams = 'all'                        # Targetbeams to flag, options: 'all' or '00,01,02'
 preflag_manualflag = True                           # Run the manualflag options
 preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
 preflag_manualflag_polcal = True                    # Run manualflag options for the polarised calibrator
 preflag_manualflag_target = True                    # Run manualflag options for the target beams
-preflag_manualflag_targetbeams = 'all'              # Targetbeams to flag, options: 'all' or '00,01,02' (deprecated)
 preflag_manualflag_auto = True                      # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
@@ -54,7 +52,6 @@ preflag_aoflagger_bandpass = True                   # Derive a preliminary bandp
 preflag_aoflagger_fluxcal = True                    # AOFlag the flux calibrator
 preflag_aoflagger_polcal = True                     # AOFlag the polarised calibrator
 preflag_aoflagger_target = True                     # AOFlag the target beams
-preflag_aoflagger_targetbeams = 'all'               # Targetbeams to flag, options: 'all' or '00,01,02' (deprecated)
 preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the flux calibrator
 preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
 preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
@@ -73,13 +70,11 @@ crosscal_leakage = True                             # Polarisation leakage corre
 crosscal_polarisation_angle = True                  # Polarisation angle corrections
 crosscal_transfer_to_cal = True                     # Transfer corrections to calibrators
 crosscal_transfer_to_target = True                  # Transfer corrections to the target fields
-crosscal_transfer_to_target_targetbeams = 'all'     # Targetbeams to transger the solutions to, options: 'all' or '00,01,02'
 
 [CONVERT]
 convert_fluxcal = True                              # Convert the flux calibrator dataset
 convert_polcal = True                               # Convert the polarised calibrator dataset
 convert_target = True                               # Convert the target beam dataset
-convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
 convert_removeuvfits = True                         # Remove the UVFITS files
 convert_removems = True                             # Remove target measurement sets
 convert_averagems = True                            # Save averaged down target measurement sets
@@ -116,6 +111,7 @@ selfcal_phase_uvmin = [0.5,0.3,0.0,0.0,0.0,0.0]     # Minimum u,v-range to use f
 selfcal_phase_uvmax = [3000,3000,3000,3000,3000,3000]    # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
 selfcal_phase_solint = 'auto'                       # Selfcal solution intervals for each major cycle as a list (e.g. [10,5,3]) or 'auto' for an automatic calculation
 selfcal_phase_nfbin = 32                            # Number of frequency solution intervals
+selfcal_phase_robust = -2                           # Robust weighting setting
 selfcal_amp = 'auto'                                # Do amplitude calibration, possible values True, False, 'auto'
 selfcal_amp_auto_limit = 1.0                        # Threshold for the sum of clean components in Jy in the last model to set amp calibration True in auto mode
 selfcal_amp_minorcycle = 3                          # Maximum number of additional minor cycles to create amplitude model
@@ -131,6 +127,7 @@ selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use f
 selfcal_amp_solint = 'auto'                         # Selfcal solution interval for amplitude calibration (e.g. 20) or 'auto' for an automatic calculation
 selfcal_amp_nfbin = 32                              # Number of solution intervals over frequency for amplitude calibration
 selfcal_amp_ratio = 1.2                             # Ratio of the dirty image min, max, std before and after amplitude calibration to verify amplitude calibration as good
+selfcal_amp_robust = -2                             # Robust weighting setting
 
 [CONTINUUM]
 continuum_gaussianity = 1e-2                        # Gaussianity parameter for residual images in all steps to verify them as good (see scipy.stats.normaltest)
@@ -142,6 +139,7 @@ continuum_mfimage_c1 = 5.0                          # c1 parameter for clean thr
 continuum_mfimage_drinc = 10.0                      # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
+continuum_mfimage_robust = -2                       # Robust weighting setting
 continuum_chunkimage = False                         # Chunk continuum imaging
 continuum_chunkimage_startchannels = [0,32,64,96,128,160]      # Starting subbands for each chunk
 continuum_chunkimage_endchannels = [31,63,95,127,159]          # Ending subband for each chunk
@@ -152,15 +150,16 @@ continuum_chunkimage_c1 = 5.0                       # c1 parameter for clean thr
 continuum_chunkimage_drinc = 10.0                   # Increment for each iteration for the masking using max(residual map)/drinc
 continuum_chunkimage_mindr = 5.0                    # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_chunkimage_nsigma = 5                     # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
+continuum_chunkimage_robust = -2                       # Robust weighting setting
 
 [LINE]
 line_beams = 'all'                                  # Beams to run line imaging on, list of integers (e.g. 1,2,3) or 'all'
-line_first_level_threads = 16                       # set the first level threads for line
-line_second_level_threads = 32                      # set the second level threads for line
-line_cube_channel_list = [[1059, 4712], [4389, 8042], [7719, 11372], [11048, 12266]]
+line_first_level_threads = 32                       # set the first level threads for line
+line_second_level_threads = 16                      # set the second level threads for line
+line_cube_channel_list =  [[1057, 4710], [4387, 8040], [7717, 11370], [11047, 12265]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
-line_splitdata_chunkbandwidth = 0.009375             # in GHz: defines number of subbands and is 0.3/(number of subbands): default for 16 subbands is 0.01875 = 0.3/16 GHz or 32 chunks with 0.009375
+line_splitdata_chunkbandwidth = 0.0046875           # in GHz: defines number of subbands and is 0.15/(number of subbands): default for 16 subbands is 0.009375 = 0.3/16 GHz or 32 chunks with 0.0046875
 line_splitdata_channelbandwidth = 0.000036621       # [Deprecated, will be overridden by values in line_cube_channelwidth_list], in GHz
 line_transfergains = True 	  		                # if False no selfcal solutions will be applied to the data. Default is True.
 line_subtract = True                                # Subtract continuum from the uv data
