Added settings for AAF module

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -28,6 +28,10 @@ prepare_obsnum_target = None                        # Observation number of the 
 prepare_target_beams = None                         # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
+[AAF]
+aaf_run = False                                     # Enable or disable aaf_filter
+aaf_tolerance = 0.00001                             # Tolerance level taken from github example
+
 [SPLIT]
 split_startchannel = 12288                          # First channel to split out
 split_endchannel = 24575                           # Last channel to split out
