Added AAF setting

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -29,6 +29,7 @@ prepare_target_beams = None                         # Target beam numbers to cop
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
 [AAF]
+aaf_run = False                                     # Set to true if AAF should run or was run on the given data set
 aaf_tolerance = 0.00001                             # Tolerance level taken from github example
 
 [SPLIT]
