Added aaf settings for target, polcal and fluxcal

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -29,7 +29,9 @@ prepare_target_beams = None                         # Target beam numbers to cop
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
 [AAF]
-aaf_run = False                                     # Set to true if AAF should run or was run on the given data set
+aaf_fluxcal = False                                 # Set to true if AAF should run or was run on the given data set
+aaf_polcal = False                                 # Set to true if AAF should run or was run on the given data set
+aaf_target = False                                 # Set to true if AAF should run or was run on the given data set
 aaf_tolerance = 0.00001                             # Tolerance level taken from github example
 
 [SPLIT]
@@ -39,6 +41,9 @@ split_endchannel = 24575                           # Last channel to split out
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
 preflag_edges = True                                # Flag subband egdes for all datasets
+preflag_aff_fluxcal = aaf_fluxcal
+preflag_aff_polcal = aaf_polcal
+preflag_aff_target = aaf_target
 preflag_ghosts = False                              # Flag ghost channels for all datasets
 preflag_manualflag = True                           # Run the manualflag options
 preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
