Turned off flagging autocorrelation

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -40,7 +40,7 @@ preflag_manualflag = True                           # Run the manualflag options
 preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
 preflag_manualflag_polcal = True                    # Run manualflag options for the polarised calibrator
 preflag_manualflag_target = True                    # Run manualflag options for the target beams
-preflag_manualflag_auto = True                      # Flag auto-correlations
+preflag_manualflag_auto = False                     # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
 preflag_manualflag_baseline = ''                    # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
