--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -142,7 +142,7 @@ continuum_mfimage_drinc = 10.0                      # Increment for each iterati
 continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
 continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
 continuum_mfimage_robust = -2                       # Robust weighting setting
-continuum_chunkimage = False                         # Chunk continuum imaging
+continuum_chunkimage = True                         # Chunk continuum imaging
 continuum_chunkimage_startchannels = [0,32,64,96,128,160]      # Starting subbands for each chunk
 continuum_chunkimage_endchannels = [31,63,95,127,159]          # Ending subband for each chunk
 continuum_chunkimage_imsize = 2049                  # Image size of the chunk images
