--- a/apercal/modules/default_svc.cfg
+++ b/apercal/modules/default_svc.cfg
@@ -50,8 +50,8 @@ preflag_manualflag_baseline = ''                    # Flag certai baselines, e.g
 preflag_manualflag_channel = ''                     # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
-preflag_manualflag_file = '190409015_flags.json'                        # File with flagging information
-preflag_manualflag_file_path = '/home/schulz/pipeline/apercal_run/svc/'                   # Path to file with flagging information, if empty it is assumed to be in `basedir`
+preflag_manualflag_file = ''                        # File with flagging information
+preflag_manualflag_file_path = ''                   # Path to file with flagging information, if empty it is assumed to be in `basedir`
 preflag_aoflagger = True                            # Run the aoflagger step
 preflag_aoflagger_bandpass = True                   # Derive a preliminary bandpass for AOFlagging
 preflag_aoflagger_fluxcal = True                    # AOFlag the flux calibrator
