Turned aaf on in config

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -9,7 +9,7 @@ fluxcal = ''                                        # Flux calibrator dataset, e
 polcal = ''                                         # Polarised calibrator dataset, e.g. '3C286.MS'
 target = ''                                         # Target dataset, e.g. 'LH_WSRT.MS'
 basedir = ''                                        # Base directory for your data reduction, e.g '/data/adebahr/apertif/LH_WSRT/'
-beam = '10'                                         # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
+beam = ''                                           # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
 rawsubdir = 'raw'                                   # Sub-directory for raw datasets, e.g. 'raw'
 crosscalsubdir = 'crosscal'                         # Sub-directory for cross calibration, e.g. 'crosscal'
 selfcalsubdir = 'selfcal'                           # Sub-directory for self calibration, e.g. 'selfcal'
@@ -29,7 +29,7 @@ prepare_target_beams = None                         # Target beam numbers to cop
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
 [AAF]
-aaf_apply = False                                   # Set to true to apply data set
+aaf_apply = True                                   # Set to true to apply data set
 aaf_tolerance = 0.00001                             # Tolerance level taken from github example
 
 [SPLIT]
