fixed aaf setting

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -39,7 +39,7 @@ split_endchannel = 24575                           # Last channel to split out
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
 preflag_edges = True                                # Flag subband egdes for all datasets
-preflag_aaf_applied = aaf_apply                     # Set to true of AAF was applied to datasets or set to AAF setting
+preflag_aaf_applied = True                          # Set to true of AAF was applied to datasets or set to AAF setting
 preflag_ghosts = False                              # Flag ghost channels for all datasets
 preflag_manualflag = True                           # Run the manualflag options
 preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
