--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -75,6 +75,7 @@ crosscal_leakage = True                             # Polarisation leakage corre
 crosscal_polarisation_angle = True                  # Polarisation angle corrections
 crosscal_transfer_to_cal = True                     # Transfer corrections to calibrators
 crosscal_transfer_to_target = True                  # Transfer corrections to the target fields
+crosscal_autocorrelation_data_fraction_limit = 0.5  # Fraction of autocorrelation amplitude that is above threshold for flagging
 
 [CONVERT]
 convert_fluxcal = True                              # Convert the flux calibrator dataset
