--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -46,7 +46,7 @@ preflag_manualflag_target = True                    # Run manualflag options for
 preflag_manualflag_auto = False                     # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
-preflag_manualflag_baseline = ''                    # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
+preflag_manualflag_baseline = 'RTC&RTD'             # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
 preflag_manualflag_channel = '0~1024'               # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
