- added Q, U and V mosaicking to mosaic_v2 module - updated cfg files to make mosaic_v2 compatible with notebook

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -214,10 +214,54 @@ polarisation_v_cellsize = 4                         # Cell size of the V-image
 polarisation_v_clean_sigma = 1.0                    # Clean threshold factor (sigma*std of map)
 
 [MOSAIC]
+mosaic_taskid = None
+mosaic_beams = 'all'
+mosaic_primary_beam_shape_files_location = "/tank/apertif/driftscans/fits_files/191023/chann_5"
+mosaic_name = None
+mosaic_step_limit = None
+mosaic_parallelisation = None
+mosaic_parallelisation_cpus = None
+mosaic_primary_beam_type = 'Correct'
+mosaic_gaussian_beam_map_size = 3073
+mosaic_gaussian_beam_map_cellsize = 4.0
+mosaic_gaussian_beam_map_fwhm_arcsec = 1950.0
+mosaic_beam_map_cutoff = 0.25
+mosaic_use_askap_based_matrix = False
+mosaic_common_beam_type = ''
 mosaic_continuum_mf = True
+mosaic_continuum_subdir = None
+mosaic_continuum_images_subdir = None
+mosaic_continuum_beam_subdir = None
+mosaic_continuum_mosaic_subdir = None
+mosaic_continuum_image_origin = ''
+mosaic_continuum_projection_centre_ra = None
+mosaic_continuum_projection_centre_dec = None
+mosaic_continuum_projection_centre_beam = '16'
+mosaic_continuum_projection_centre_file = None
+mosaic_continuum_imsize = 5121
+mosaic_continuum_cellsize = 4
+mosaic_continuum_common_beam_type = 'circular'
+mosaic_continuum_clean_up = True
+mosaic_continuum_clean_up_level = None
+mosaic_continuum_image_validation = None
 mosaic_continuum_chunks = False
 mosaic_line = False
-mosaic_polarisation = False
+mosaic_polarisation = True
+mosaic_polarisation_subdir = None
+mosaic_polarisation_images_subdir = None
+mosaic_polarisation_beam_subdir = None
+mosaic_polarisation_mosaic_subdir = None
+mosaic_polarisation_image_origin = ''
+mosaic_polarisation_projection_centre_beam = 'continuum'
+mosaic_polarisation_projection_centre_ra = None
+mosaic_polarisation_projection_centre_dec = None
+mosaic_polarisation_projection_centre_file= None
+mosaic_polarisation_imsize = 5121
+mosaic_polarisation_cellsize = 4
+mosaic_polarisation_common_beam_type = 'circular'
+mosaic_polarisation_clean_up = True
+mosaic_polarisation_clean_up_level = None
+mosaic_polarisation_image_validation = None
 
 [TRANSFER]
 transfer_convert_selfcaluv2uvfits = True              # Copy the selfcal solutions to the original dataset and export as UVFITS
