Specify flagging strategy in cfg file, not preflag module

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -57,9 +57,9 @@ preflag_aoflagger_bandpass = True                   # Derive a preliminary bandp
 preflag_aoflagger_fluxcal = True                    # AOFlag the flux calibrator
 preflag_aoflagger_polcal = True                     # AOFlag the polarised calibrator
 preflag_aoflagger_target = True                     # AOFlag the target beams
-preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the flux calibrator
-preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
-preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
+preflag_aoflagger_fluxcalstrat = 'apertif-2021-03-09.lua'     # Flagging strategy for the flux calibrator
+preflag_aoflagger_polcalstrat = 'apertif-2021-03-09.lua'       # Flagging strategy for the polarised calibrator
+preflag_aoflagger_targetstrat = 'apertif-2021-03-09.lua'       # Flagging strategy for the target beams
 preflag_aoflagger_threads = 48                      # Number of threads used by Aoflagger
 preflag_aoflagger_use_interval = True               # Use interval of time steps to process data
 preflag_aoflagger_delta_interval = 450              # Length of interval
