Update 150 MHz config file

--- a/apercal/modules/default_150MHz.cfg
+++ b/apercal/modules/default_150MHz.cfg
@@ -46,7 +46,7 @@ preflag_manualflag_target = True                    # Run manualflag options for
 preflag_manualflag_auto = False                     # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
-preflag_manualflag_baseline = 'RTC&RTD'             # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
+preflag_manualflag_baseline = ''             # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
 preflag_manualflag_channel = '0~1024'               # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
@@ -57,9 +57,9 @@ preflag_aoflagger_bandpass = True                   # Derive a preliminary bandp
 preflag_aoflagger_fluxcal = True                    # AOFlag the flux calibrator
 preflag_aoflagger_polcal = True                     # AOFlag the polarised calibrator
 preflag_aoflagger_target = True                     # AOFlag the target beams
-preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the flux calibrator
-preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
-preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
+preflag_aoflagger_fluxcalstrat = 'apertif-2021-03-09.lua'     # Flagging strategy for the flux calibrator
+preflag_aoflagger_polcalstrat = 'apertif-2021-03-09.lua'       # Flagging strategy for the polarised calibrator
+preflag_aoflagger_targetstrat = 'apertif-2021-03-09.lua'       # Flagging strategy for the target beams
 preflag_aoflagger_threads = 48                      # Number of threads used by Aoflagger
 preflag_aoflagger_use_interval = True               # Use interval of time steps to process data
 preflag_aoflagger_delta_interval = 450              # Length of interval
