Remove last subband in split

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -32,8 +32,8 @@ prepare_bypass_alta = False                         # Set to true if you don't w
 phaseslope_correction = False                       # Enable/Disable phase slope correction
 
 [SPLIT]
-split_startchannel = 6144                          # First channel to split out
-split_endchannel = 24575                           # Last channel to split out
+split_startchannel = 6080                          # First channel to split out
+split_endchannel = 24511                           # Last channel to split out
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
@@ -47,7 +47,7 @@ preflag_manualflag_auto = False                     # Flag auto-correlations
 preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
 preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
 preflag_manualflag_baseline = ''                    # Flag certain baselines, e.g. 'RT2&RT3,RT5&RT6'
-preflag_manualflag_channel = '18368~18431'          # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
+preflag_manualflag_channel = ''                     # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
 preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
 preflag_manualflag_clipzeros = False                # Flags all Zero-valued data (done by default AOFlagger strategies as well)
 preflag_manualflag_file = ''                        # File with flagging information
@@ -163,7 +163,7 @@ line_beams = 'all'                                  # Beams to run line imaging 
 line_first_level_threads = 32                       # set the first level threads for line
 line_second_level_threads = 16                      # set the second level threads for line
 #line_cube_channel_list =  [[1057, 4710], [4387, 8040], [7717, 11370], [11047, 12265]]
-line_cube_channel_list =  [[1, 3480], [3157, 6810], [6487, 10140], [9818, 11035]]
+line_cube_channel_list =  [[1, 3544], [3221, 6874], [6551, 10204], [9882, 11100]]
 line_cube_channelwidth_list = [3.6621e-05, 3.6621e-05, 3.6621e-05, 1.2207e-05] # list of channel widths of the cube for splitting data
 line_splitdata = True                               # if True: split the band into subbands for faster processing
 line_splitdata_chunkbandwidth = 0.0046875           # in GHz: defines number of subbands and is 0.15/(number of subbands): default for 16 subbands is 0.009375 = 0.3/16 GHz or 32 chunks with 0.0046875
